# side-projects

./: CMakeLists.txt  build.txt
2048/2048/: exe
AsteroidBelt/: CMakeLists.txt
AsteroidBelt/Config/: preferences
AsteroidBelt/Sources/: Actions.cpp  Actions.h  Includes.h  Internal.cpp  Internal.h  main.cpp
AsteroidBelt/Sources/Scenes/: MakeScene.cpp  MakeScene.h  Scene.cpp  Scene.h
AsteroidBelt/Sources/UIElements/UIButtons/: DynamicUIButton.cpp  DynamicUIButton.h  StaticUIButton.cpp  StaticUIButton.h  UIButton.cpp  UIButton.h
AsteroidBelt/Sources/UIElements/UIImages/: UIImage.cpp  UIImage.h
Gravity/: CMakeLists.txt
Gravity/Headers/: Action.h
Gravity/Headers/Scene/: MainMenu.h  MakeScene.h  Scene.h
Gravity/Headers/UI/: UIButton.h  UILabel.h
Gravity/Sources/: main.cpp
Gravity/Sources/Scene/: MainMenu.cpp  MakeScene.cpp  Scene.cpp
Gravity/Sources/UI/: UIButton.cpp  UILabel.cpp
MazeSolver/: CMakeLists.txt  main.cpp  maze.txt  maze2.txt  maze3.txt
PingPong/: ._main.py  main.py
Sources/: Actions.h  Includes.cpp  Includes.h  main.cpp
Sources/Scenes/: Scene.cpp  Scene.h
Sources/UIElements/UIButtons/: DynamicUIButton.h  UIButton.cpp
Sources/UIElements/UILabels/: UILabels.cpp  UILabels.h
u2gptnodebot/: main.py
wordSearch/: CMakeLists.txt  main.cpp
